samples/_failures_safe/1761044920_94932a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35522a43.c: In function ‘main’:
./samples/SAFE/__tmp_35522a43.c:150: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_35522a43.c:149:16: note: to match this ‘(’
  149 |         fprintf(stderr
      |                ^
./samples/SAFE/__tmp_35522a43.c:149:9: error: too few arguments to function ‘fprintf’
  149 |         fprintf(stderr
      |         ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_35522a43.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_35522a43.c:149:9: error: expected declaration or statement at end of input
  149 |         fprintf(stderr
      |         ^~~~~~~
./samples/SAFE/__tmp_35522a43.c:149:9: error: expected declaration or statement at end of input
